# UR5_control

./: .~lock.Client-Interface.xlsx#  Client-Interface.xlsx  README.md  controlUR5.py  pyproject.toml  urx_script.py
