[tool.poetry]
name = "ur5-control"
version = "0.1.0"
description = ""
authors = ["Zarif Aziz zarifaziz@noemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urx = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
